src/objects/City__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Humidity__c</fullName>
        <label>Humidity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pressure__c</fullName>
        <label>Pressure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Max__c</fullName>
        <label>Temp Max</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Min__c</fullName>
        <label>Temp Min</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temparature__c</fullName>
        <label>Temparature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>City</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>